app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-prod-deployment
  labels:
    app: login
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
      version: v2
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: login 
        version: v2 
#       annotations: 
#         date: "+%H:%M:%S %d/%m/%y"
    spec:     # pod spec
      imagePullSecrets:
      - name: jfrog-secret
      containers: 
      - name: login
        #image: neethusnair/login-docker:latest # image we pushed
        image: sreyo.jfrog.io/ns-docker-prod-local/login-docker:latest # image we pushed
        
        #imagePullPolicy: Never
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
