vs-list.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: list-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
  - match:
    - uri:
        prefix: /welcome
    route:
    - destination:
        host: list-service.default.svc.cluster.local
        port:
          number: 4000
