vs-login10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: login-service.default.svc.cluster.local
            port:
              number: 3000
            subset: v2
          weight: 90  
        - destination:
            host: login-service.default.svc.cluster.local
            port:
              number: 3000
            subset: v1
          weight: 10
